tests-integration/fixtures/checking/1772567520_derive_functor_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Wrap ::
  forall (t2 :: Type) (@f :: (t2 :: Type) -> Type) (@a :: (t2 :: Type)).
    (f :: (t2 :: Type) -> Type) (a :: (t2 :: Type)) ->
    Wrap @(t2 :: Type) (f :: (t2 :: Type) -> Type) (a :: (t2 :: Type))
WrapNoFunctor ::
  forall (t5 :: Type) (@f :: (t5 :: Type) -> Type) (@a :: (t5 :: Type)).
    (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type)) ->
    WrapNoFunctor @(t5 :: Type) (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type))

Types
Wrap :: forall (t2 :: Type). ((t2 :: Type) -> Type) -> (t2 :: Type) -> Type
WrapNoFunctor :: forall (t5 :: Type). ((t5 :: Type) -> Type) -> (t5 :: Type) -> Type

Derived
derive forall (t6 :: Type -> Type).
  Functor (t6 :: Type -> Type) => Functor (Wrap @Type (t6 :: Type -> Type))
derive forall (t8 :: Type -> Type). Functor (WrapNoFunctor @Type (t8 :: Type -> Type))

Roles
Wrap = [Representational, Nominal]
WrapNoFunctor = [Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (t8 :: Type -> Type)
  --> 9:1..9:42
  |
9 | derive instance Functor (WrapNoFunctor f)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
